--- a/TaskBot.Web/appsettings.json
+++ b/TaskBot.Web/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "BotToken": "6505549862:AAEpiypQ1Td_3q2lGF9QsoVG5xw7tCaK8Pc",
-  "Url": "https://7418-37-26-136-195.ngrok-free.app"
+  "TelegramBotToken": "6505549862:AAEpiypQ1Td_3q2lGF9QsoVG5xw7tCaK8Pc",
+  "DiscordBotToken": "MTE3Njg1MTQ1MDExNTE0MTY0Mw.G6EQW6.-Ttn_2J2ZojzEqMuTKLjGJBVI6QaS4EpZO0Biw",
+  "Url": "https://5613-37-26-136-195.ngrok-free.app"
 }
