--- a/TaskBot.Services/TaskBot.Services.csproj
+++ b/TaskBot.Services/TaskBot.Services.csproj
@@ -8,6 +8,8 @@
 
 
     <ItemGroup>
+      <PackageReference Include="Discord.Net.Commands" Version="3.13.0" />
+      <PackageReference Include="Discord.Net.WebSocket" Version="3.12.0" />
       <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
